--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,13 @@ body {
   margin: 0 auto;
   gap: 1.5rem;
   justify-content: space-between;
+  align-items: center;
 }
 
 input {
+  width: 15rem;
+}
+
+.input-container {
   width: 100%;
 }
